--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </head>
 <body>
 <div>
-<table border="1">
+<table border="1"  width=100%>
 <tbody>
 <tr>
-<td style="width: 5em;" rowspan="3"><img src="ClarksSeremene.png" /></td>
+<td style="width: 5em;" rowspan="3"><img src="ClarksSeremene.png" width=100%/></td>
 <td>Clarks Women's Seremene Walking Shoe</td>
 </tr>
 <tr>
