--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div>
 <table border="1"  width=100%>
 <tbody>
-<tr>
+<tr width=100%>
 <td style="width: 5em;" rowspan="3"><img src="ClarksSeremene.png" width=100%/></td>
 <td>Clarks Women's Seremene Walking Shoe</td>
 </tr>
@@ -32,7 +32,7 @@
 <td>$72.99+tax+ship+service</td>
 </tr>
 <tr>
-<td>Size: 5.5 B(M) US
+<td>Size: 5.5 B(M) US<br />
 Color: Grey</td>
 </tr>
 </tbody>
