--- a/index.html
+++ b/index.html
@@ -12,31 +12,9 @@
 <!--
 -->
 </style>
-<link rel="stylesheet" href="css/main.css" type="text/css" />
-<link rel="stylesheet" href="css/link-dotted.css" type="text/css" />
-<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.1.min.js"></script>
-<script type="text/javascript" src="jquery/jquery-cookie/jquery.cookie.js"></script>
-<script type="text/javascript" src="javascript/WMfunctions.jsp"></script>
-<script>
-</script>
 </head>
 <body>
-<div>
-<table border="1"  width=100%>
-<tbody>
-<tr width=100%>
-<td style="width: 5em;" rowspan="3"><img src="ClarksSeremene.png" width=100%/></td>
-<td>Clarks Women's Seremene Walking Shoe</td>
-</tr>
-<tr>
-<td>$72.99+tax+ship+service</td>
-</tr>
-<tr>
-<td>Size: 5.5 B(M) US<br />
-Color: Grey</td>
-</tr>
-</tbody>
-</table>
-</div>
+  <h2>袁亚宁的专属网站</h2>
+  <a href="spline.html">出图</a>
 </body>
 </html>
