--- a/spline/index.html
+++ b/spline/index.html
@@ -6,6 +6,8 @@
     <title> Highcharts directive demo </title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
