--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
 </head>
 <body>
-<embed src="cv.pdf" width="500" height="375" 
- type='application/pdf' />
+<img src='cv.jpg' width="100%" />
 </body>
 </html>
